force-app/main/default/objects/Partial_Close__c/Partial_Close__c.object-meta.xml
<CustomObject>
    <label>Partial Close</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Partial Close Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partial Closes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>