force-app/main/default/objects/Partial_Close__c/fields/Close_Price__c.field-meta.xml
<CustomField>
    <fullName>Close_Price__c</fullName>
    <label>Close Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>