force-app/main/default/objects/Partial_Close__c/fields/Close_Profit__c.field-meta.xml
<CustomField>
    <fullName>Close_Profit__c</fullName>
    <label>Close Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>