force-app/main/default/objects/Partial_Close__c/fields/Closing_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closing_Comments__c</fullName>
    <label>Closing Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>