force-app/main/default/objects/Partial_Close__c/fields/Profit_Pips__c.field-meta.xml
<CustomField>
    <fullName>Profit_Pips__c</fullName>
    <formula>IF(
ISPICKVAL( SR_Hedge__r.Side__c , &apos;BUY&apos;),
Close_Price__c -  SR_Hedge__r.X1st_Trade_Open_Price__c ,
SR_Hedge__r.X1st_Trade_Open_Price__c - Close_Price__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profit Pips</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>