force-app/main/default/objects/Partial_Close__c/fields/SR_Hedge__c.field-meta.xml
<CustomField>
    <fullName>SR_Hedge__c</fullName>
    <label>SR Hedge</label>
    <referenceTo>SR_Hedge__c</referenceTo>
    <relationshipLabel>Partial Closes</relationshipLabel>
    <relationshipName>Partial_Closes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>