force-app/main/default/objects/Partial_Close__c/fields/Units_Closed__c.field-meta.xml
<CustomField>
    <fullName>Units_Closed__c</fullName>
    <label>Units Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>